# src/handlers/authHandler.go
@@ -25,7 +25,7 @@ type RegisterInput struct {
 //	@Param			Body	body	contract.LoginInput	true	"the body to login a user"
 //	@Produce		json
 //	@Success		200	{object}	map[string]interface{}
-//	@Router			/kredit-plus/customer/login [post]
+//	@Router			/kredit-plus/login [post]
 func Login(svc AuthService) gin.HandlerFunc {
 	return func(c *gin.Context) {
 
@@ -53,7 +53,7 @@ func Login(svc AuthService) gin.HandlerFunc {
 //	@Param			Body	body	contract.RegisterInput	true	"the body to register a user"
 //	@Produce		json
 //	@Success		200	{object}	map[string]interface{}
-//	@Router			/kredit-plus/customer/register [post]
+//	@Router			/kredit-plus/register [post]
 func Register(svc AuthService) gin.HandlerFunc {
 	return func(c *gin.Context) {
 
@@ -72,83 +72,3 @@ func Register(svc AuthService) gin.HandlerFunc {
 		c.JSON(http.StatusOK, gin.H{"message": "registration success", "data": response})
 	}
 }
-
-// RegisterAdmin godoc
-//	@Summary		Register a Full Access account (ADMIN).
-//	@Description	registering a user from full access.
-//	@Tags			Auth
-//	@Param			Body	body	RegisterInput	true	"the body to register a FULL ACCESS account (ADMIN)"
-//	@Produce		json
-//	@Success		200	{object}	map[string]interface{}
-//	@Router			/register-admin [post]
-// func RegisterAdmin(c *gin.Context) {
-// 	db := c.MustGet("app").(*gorm.DB)
-// 	var input RegisterInput
-
-// 	if err := c.ShouldBindJSON(&input); err != nil {
-// 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-// 		return
-// 	}
-
-// 	u := entities.User{}
-
-// 	u.Email = input.Email
-// 	u.Email = input.Email
-// 	u.Password = input.Password
-// 	u.LastLogin = time.Now()
-
-// 	_, err := u.SaveUser(db)
-
-// 	if err != nil {
-// 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-// 		return
-// 	}
-
-// 	user := map[string]string{
-
-// 		"username":   input.Email,
-// 		"email":      input.Email,
-// 		"last_login": u.LastLogin.Format("2006-01-02 15:04:05"),
-// 	}
-
-// 	c.JSON(http.StatusOK, gin.H{"message": "registration success", "username": user})
-
-// }
-
-// UpdatePassword godoc
-//	@Summary		Change Password.
-//	@Description	change password.
-//	@Tags			Auth
-//	@Param			Authorization	header	string	true	"Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
-//	@Security		BearerToken
-//	@Produce		json
-//	@Param			Body	body		ChangePasswordInput	true	"the body to update age merk category"
-//	@Success		200		{object}	entities.User
-//	@Router			/change-password [patch]
-// func UpdatePassword(c *gin.Context) {
-
-// 	db := c.MustGet("app").(*gorm.DB)
-// 	// Validate input
-// 	var input ChangePasswordInput
-// 	if err := c.ShouldBindJSON(&input); err != nil {
-// 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-// 		return
-// 	}
-// 	u := new(entities.User)
-// 	user, _ := c.Get("user")
-// 	users := user.(entities.User)
-
-// 	hashed, _ := u.GeneratePassword(input.Password)
-
-// 	result := db.Model(u).Where("id = ?", users.ID).UpdateColumn("password", hashed)
-
-// 	if result.Error != nil {
-// 		switch {
-// 		case errors.Is(result.Error, gorm.ErrRecordNotFound):
-
-// 		default:
-// 		}
-// 	}
-
-// 	c.JSON(http.StatusOK, gin.H{"message": "password has been changed!", "username": users.Email})
-// }
