# src/handlers/profileHandler.go
@@ -7,22 +7,6 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// GetAllCommentNews godoc
-//	@Summary		Get all Comment.
-//	@Description	Get a list of Comment.
-//	@Tags			Comment News
-//	@Produce		json
-//	@Success		200	{object}	[]entities.CommentsNews
-//	@Router			/comments-news [get]
-// func GetAllCommentNews(c *gin.Context) {
-// 	// get db from gin context
-// 	db := c.MustGet("app").(*gorm.DB)
-// 	var comments []entities.CommentsNews
-// 	db.Find(&comments)
-
-// 	c.JSON(http.StatusOK, gin.H{"data": comments})
-// }
-
 // CreateCommentNews godoc
 //
 //	@Summary		Create Profile.
@@ -31,7 +15,7 @@ import (
 //	@Param			Body	body	contract.ProfileInput	true	"the body to create a new Profile"
 //	@Security		kreditplus-token
 //	@Produce		json
-//	@Success		200	{object}	contract.ProfileInput
+//	@Success		200	{object}	contract.ProfileOutput
 //	@Router			/kredit-plus/customer/profile [post]
 func CreateProfile(svc ProfileService) gin.HandlerFunc {
 	return func(c *gin.Context) {
@@ -51,27 +35,3 @@ func CreateProfile(svc ProfileService) gin.HandlerFunc {
 		c.JSON(http.StatusOK, gin.H{"data": response})
 	}
 }
-
-// DeleteCommentNews godoc
-//	@Summary		Delete one Comment.
-//	@Description	Delete a Comment by id.
-//	@Tags			Comment News
-//	@Param			Authorization	header	string	true	"Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
-//	@Security		BearerToken
-//	@Produce		json
-//	@Param			id	path		string	true	"Comment id"
-//	@Success		200	{object}	map[string]boolean
-//	@Router			/comments-news/{id} [delete]
-// func DeleteCommentNews(c *gin.Context) {
-// 	// Get model if exist
-// 	db := c.MustGet("app").(*gorm.DB)
-// 	var comment entities.CommentsNews
-// 	if err := db.Where("id = ?", c.Param("id")).First(&comment).Error; err != nil {
-// 		c.JSON(http.StatusBadRequest, gin.H{"error": "Record not found!"})
-// 		return
-// 	}
-
-// 	db.Delete(&comment)
-
-// 	c.JSON(http.StatusOK, gin.H{"data": true})
-// }
